architecture/support-domain/architects-visualization/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: architects-visualization
  namespace: support-domain
  labels:
    app.kubernetes.io/name: architects-visualization
    app.kubernetes.io/component: control-plane
    app.kubernetes.io/part-of: arkit8s
  annotations:
    architecture.domain: support
    architecture.function: architecture-visualization
    architecture.part_of: arkit8s
spec:
  selector:
    app: architects-visualization
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
